# stern-gerlach

./: .eslintrc.json  .gitignore  jsconfig.json  makefile  notes.md  package-lock.json  package.json  readme.md  to-do.md
public/: index.html
public/static/css/: styles.css
public/static/js/: config.js  draw.js  drawables.js  setup-window-resize-listener.js  setup.js  state.js
public/static/js/canvases/: measurer.js
public/static/js/controllers/: app-controller.js  canvas-controller.js  ui-controller.js
public/static/js/lib/: get-canvas-context.js
public/static/js/models/: measurer.js  smiley-facy.js  vector.js
public/static/js/models/drawables/measurer/: index.js
rust/: Cargo.toml  index.html
rust/src/: lib.rs
types/: controller.ts  drawable.ts
website/: index.html
website/static/js/: maintain_canvas_size.js  setup.js
