[package]
name = "stern-gerlach"
version = "0.1.0"
authors = ["James Wright <hello@jameswright.me>"]
edition = "2018"
repository = "https://github.com/thewrongjames/stern-gerlach"
description = "The rust-wasm code behind an interactive simulator for something like the Stern-Gerlach expriment."

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.63"
