[package]
name = "stern-gerlach"
version = "0.1.0"
authors = ["James Wright <hello@jameswright.me>"]
edition = "2018"
repository = "https://github.com/thewrongjames/stern-gerlach"
description = "The rust-wasm code behind an interactive simulator for something like the Stern-Gerlach expriment."

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
